--- a/src/main/webapp/WEB-INF/views/items/list.jspx
+++ b/src/main/webapp/WEB-INF/views/items/list.jspx
@@ -11,4 +11,24 @@
 	</head>
 	<h1>Items</h1>
 	
+	<c:if test="${not empty items}">
+		<table>
+			<thead>
+				<tr>
+					<th>Item ID</th>
+					<th>Item Text</th>
+				</tr>
+			</thead>
+			<tbody>
+				<c:forEach items="${items}" var="item">
+					<tr>
+						<td>${item.id}</td>
+						<td class="item_text">${item.itemText}</td>
+					</tr>
+				</c:forEach>
+			
+			</tbody>
+		</table>
+	</c:if>
+	
 </div>
